@@ -33,7 +33,7 @@ epylog@linux.duke.edu. Please send all your inquires there.
 
 LICENSE
 --------
-Copyright (C) 2001-2001 by Duke University
+Copyright (C) 2001-2004 by Duke University
 
 This program is free software; you can redistribute it and/or
 modify it under the terms of the GNU General Public License
