@@ -16,7 +16,7 @@ publishers = mail
 method = mail
 smtpserv = /usr/sbin/sendmail -t
 mailto = root@localhost
-format = both
+format = html
 lynx = %%LYNX_BIN%%
 include_rawlogs = no
 rawlogs_limit = 200
