@@ -1,4 +1,4 @@
-.TH "epylog-modules" "5" "0.9" "Konstantin Ryabitsev" "Applications/System"
+.TH "epylog-modules" "5" "1.0" "Konstantin Ryabitsev" "Applications/System"
 
 .SH NAME
 \fBepylog-modules\fR \- epylog module cofiguration.
