@@ -1,4 +1,4 @@
-.TH "epylog" "8" "0.9" "Konstantin Ryabitsev" "Applications/System"
+.TH "epylog" "8" "1.0" "Konstantin Ryabitsev" "Applications/System"
 
 .SH NAME
 \fBepylog\fR \- Syslog new log notifier and parser.
