@@ -1,4 +1,4 @@
-.TH "epylog.conf" "5" "0.9" "Konstantin Ryabitsev" "Applications/System"
+.TH "epylog.conf" "5" "1.0" "Konstantin Ryabitsev" "Applications/System"
 
 .SH NAME
 \fBepylog.conf\fR \- epylog configuration
